@@ -6,6 +6,10 @@
    - markus@cvs.openbsd.org 2001/09/19 13:23:29
      [key.c]
      key_read() now returns -1 on type mismatch, too
+   - stevesk@cvs.openbsd.org 2001/09/19 19:24:19
+     [readconf.c readconf.h scp.c sftp.c ssh.1]
+     add ClearAllForwardings ssh option and set it in scp and sftp; ok 
+     markus@
 
 20010918
  - (djm) Configure support for smartcards. Based on Ben's work.
